# Parallel-computing-lab-UVT

./: CMakeLists.txt  README.md  hello_mpi.c  hello_openmp.c
.devcontainer/: Dockerfile  devcontainer.json
